--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-
+<img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" class="img-fluid img-inicio" alt="">
             </div>
         </section>
 
-        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
-            <div class="container d-flex align-items-center ">
+        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0"aria-label="Seção explicativa sobre a tropicália">            <div class="container d-flex align-items-center ">
                   <div class="col-5">
                     <h2>O que foi a Tropicália?</h2>
                     <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
