--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
-            </ul>          
+            </ul>      
+            
+            <div id="opcoes-acessibilidade">
+                 <button id="aumentar fonte" class="btn btn-primary fw-bold">A+</button>
+                 <button id="diminuir fonte" class="btn btn-primary fw-bold">A+</button>
+            </div>
+
         </nav>
        
-    </header>
+    </header> 
 
 
     <main class="container my-5">
